<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Action bar and dialog titles-->
    <string name="app_name">Weather</string>
    <string name="title_today">Today</string>
    <string name="title_forecast">Forecast</string>
    <string name="title_settings">Settings</string>
    <string name="title_share_dialog">Actions</string>

    <!-- Image content descriptions-->
    <string name="background_image_desc">Background Image</string>
    <string name="current_weather_image_desc">Current weather image</string>

    <!-- Google play services related strings-->
    <string name="play_services_available">Google Play services is available</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code">Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>

    <!-- Drawer actions-->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Closed</string>

    <!-- Preference strings-->
    <string name="weather_list_preference">Settings</string>
    <string name="weather_length_preference">Unit of length</string>
    <string name="weather_temperature_preference">Unit of temperature</string>
    <string name="weather_meters_preference">Meters</string>
    <string name="weather_miles_preference">Miles</string>
    <string name="weather_celsius_preference">Celsius</string>
    <string name="weather_fahrenheit_preference">Fahrenheit</string>
    <string name="weather_meters_value">km/h</string>
    <string name="weather_miles_value">mph</string>
    <string name="weather_celsius_value">°C</string>
    <string name="weather_fahrenheit_value">°F</string>
    <string name="key_weather_length_preference">weather_length_preference</string>
    <string name="key_weather_temperature_preference">weather_temperature_preference</string>

    <!-- Error strings-->
    <string name="no_response_from_api">Data could not be retrieved. Please check your internet connection!</string>

    <!-- Arrays-->
    <string-array name="left_drawer_options">
        <item>Today</item>
        <item>Forecast</item>
    </string-array>

    <string-array name="weather_length_entries">
        <item>Meters</item>
        <item>Miles</item>
    </string-array>

    <string-array name="weather_temperature_entries">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="weather_length_values">
        <item>km/h</item>
        <item>mph</item>
    </string-array>

    <string-array name="weather_temperature_values">
        <item>°C</item>
        <item>°F</item>
    </string-array>

    <string-array name="actions_share_dialog_items">
        <item>Share</item>
        <item>Share via e-mail</item>
        <item>Share via SMS</item>
    </string-array>

</resources>
